# artifact-local

./: .gitignore  Dockerfile  README.md  go.mod  main.go  pyproject.toml
.github/workflows/: ci.yml
artifact-local/: main.py
