# This file is part of artifact-local.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[tool.poetry]
name = "artifact-local"
version = "0.1.0"
description = "The reference local artifact storage for Bob."
authors = [
    "Rahul De <rahul080327@gmail.com>"
]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
Sanic = "^19.3"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
